--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "python",
             "request": "launch",
             "module": "uvicorn",
-            "args": ["main:app", "--reload"],
+            "args": ["src.main:app", "--reload"],
             "console": "integratedTerminal"
         },
         {
